--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = indexa-git/l10n-dominicana
 	url = git@github.com:indexa-git/l10n-dominicana.git
 	branch = 15.0
+
+[submodule "crbll0/growit_account"]
+	path = crbll0/growit_account
+	url = git@github.com:crbll0/growit_account.git
+	branch = 15.0
